# pokemon-world-mcp

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
config/: fly.secrets.env.example
docs/: deploy-fly.md
scripts/: deploy-fly.ps1  drop_router_pokemon_tables.py
src/pokemon_world_mcp/: __init__.py  __main__.py  app.py  auth.py  battle.py  catalog.py  catalog_cache.py  db.py  drop_router_tables.py  experience.py  game.py  growth.py  models.py  save_store.py  world.py
tests/: test_auth.py  test_battle.py  test_catalog_cache.py  test_dual_db.py  test_faint_switch.py  test_growth.py  test_save_store.py  test_tools.py  test_world.py
